# freestars

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog
Client/: .vimsession  CGalaxy.cpp  CGalaxy.h  CGame.cpp  CGame.h  DetailsFleet.cpp  DetailsFleet.h  DetailsPlanet.cpp  DetailsPlanet.h  DetailsWin.cpp  DetailsWin.h  FSApp.cpp  FSApp.h  FSClient.cpp  FSClient.h  FSClient.rc  Graphics.cpp  Graphics.h  MainWindow.cpp  MainWindow.h  OrdersFleet.cpp  OrdersFleet.h  OrdersPlanet.cpp  OrdersPlanet.h  RaceBuild.cpp  RaceBuild.h  TX_templates.h  UniversePane.cpp  UniversePane.h  expand.xpm  freestars.cpp  freestars.h  left.xpm  racewizard.cpp  racewizard.h  racewizardP1.cpp  racewizardP2.cpp  racewizardP3.cpp  racewizardP4.cpp  racewizardP5.cpp  (+5 more)
Data/: ARRenegades.r1  Badgers.r1  Bread.r1  Brutal.r1  Dethdukk.r1  Mouses.r1  Planets.txt  Renegades.r1  Snarfoid.r1  TestGame.def  TestGame.hst  TestGame.m2  TestGame.opt  TestGame.r1  TestGame.r2  TestGame.r3  TestGame.x1  TestGame.x2  TestGame.x3  Tribble.r1  Veggies.r1
Data/2400/: TestGame.m1  TestGame.m3  TestGame.xy  readme.txt
Data/2401/: TestGame.hst  TestGame.m1  TestGame.m2  TestGame.m3  readme.txt
Docs/: Differences.txt  EventOrder.txt  EventOrder2.txt  FleeScan.txt  FreeStarsFAQ.txt  Notes.txt  Planets.txt  ScrapTech.txt  battleboard.txt  battlemove.txt  changes.txt  doxyfile  doxygen.h  growpop.txt  hst_form.txt  m_form.txt  research.txt  tasks.txt  todo.txt  x_form.txt  xy_form.txt
MersenneTwister/: .gitignore  CMakeLists.txt
QtClient/: .gitignore  CMakeLists.txt  advanced_new_game_wizard.cpp  advanced_new_game_wizard.h  angw_page1.ui  angw_page3.ui  application.qrc  cargo_transfer_dialog.cpp  cargo_transfer_dialog.h  cargo_transfer_dialog.ui  cargo_widget.cpp  cargo_widget.h  component_list_box.h  diamond_button.cpp  diamond_button.h  fleet_cargo_widget.cpp  fleet_cargo_widget.h  fleet_cargo_widget.ui  fleet_composition_model.cpp  fleet_composition_model.h  fleet_composition_widget.cpp  fleet_composition_widget.h  fleet_composition_widget.ui  fleet_report.ui  fleet_waypoints_widget.cpp  fleet_waypoints_widget.h  fleet_waypoints_widget.ui  fleet_widget.cpp  fleet_widget.h  fleet_widget.ui  fleets_in_orbit_widget.cpp  fleets_in_orbit_widget.h  fleets_in_orbit_widget.ui  folding_widget.cpp  folding_widget.h  game_view.cpp  game_view.h  graphics_array.cpp  graphics_array.h  habitation_bar.cpp  (+77 more)
QtClient/images/: arrow_up.xcf  cross.xcf  cross.xpm  fold.xcf  minconc.xcf  normal_vmap_mode.xcf  planet_value.xcf  plate.xcf  population_view.xcf  surface_minerals.xcf  unfold.xcf
Server/: .gitignore  Battle.cpp  Battle.h  BattlePlan.cpp  BattlePlan.h  Bombing.cpp  Bombing.h  CMakeLists.txt  CargoHolder.cpp  CargoHolder.h  ChangeLog  Chaser.h  Component.cpp  Component.h  Cost.cpp  Cost.h  Creation.cpp  Creation.h  FSServer.cpp  FSServer.h  FSTypes.h  Fleet.cpp  Fleet.h  Galaxy.cpp  Galaxy.h  Game.cpp  Game.h  Hull.cpp  Hull.h  Invasion.cpp  Invasion.h  Library.cpp  Location.cpp  Location.h  Main.cpp  Message.cpp  Message.h  MessageSink.cpp  MessageSink.h  MineField.cpp  (+43 more)
rules/: Graphics.xml  Hints.xml  MyModRules.xml  Rules.dtd  default.r0
tinyxml/: .gitignore  CMakeLists.txt  changes.txt  tinyxmlparser.cpp  xmltest.cpp
tinyxml/docs/: annotated.html  classTiXmlAttribute-members.html  classTiXmlAttribute.html  classTiXmlBase-members.html  classTiXmlBase.html  classTiXmlComment-members.html  classTiXmlComment.html  classTiXmlDeclaration-members.html  classTiXmlDeclaration.html  classTiXmlDocument-members.html  classTiXmlDocument.html  classTiXmlElement-members.html  classTiXmlElement.html  classTiXmlHandle-members.html  classTiXmlHandle.html  classTiXmlNode-members.html  classTiXmlNode.html  classTiXmlText-members.html  classTiXmlText.html  classTiXmlUnknown-members.html  classTiXmlUnknown.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_rela.html  functions_vars.html  (+5 more)
